--- a/css/style.css
+++ b/css/style.css
@@ -108,7 +108,7 @@ body{
     position: relative;
 }
 .intro-text {
-    margin: 150px 0px 80px;
+    margin: 100px 0px 80px;
 }
 .intro-text p{
     font-size: 23px;
@@ -267,9 +267,6 @@ ul.list-style li{
 .who-qualifies-section h2{
     margin-bottom: 30px;
 }
-.who-qualifies-section h6{
-    
-}
 .list-style ul li{
     color: #333;
     font-size: 18px;
@@ -400,4 +397,19 @@ ul.list-style li{
     .banner-section-wrapper .banner-image{
         
     }
+}
+@media only screen and (max-width:1440px){
+
+}
+@media only screen and (max-width:1199px){
+
+}
+@media only screen and (max-width:991px){
+
+}
+@media only screen and (max-width:767px){
+
+}
+@media only screen and (max-width:575px){
+
 }
