--- a/css/style.css
+++ b/css/style.css
@@ -388,6 +388,45 @@ ul.list-style li{
 .text-align-right{
     text-align: right;
 }
+.swiper{
+    width: 100%;
+    height: 510px; 
+}
+.swiper-pagination{
+    left: 0px !important;
+}
+.swiper-pagination-bullet.swiper-pagination-bullet-active{
+    background-color: #edba37;
+}
+.tns-nav button.tns-nav-active{
+    background-color: #edba37;
+}
+.tns-outer{
+    position: relative;
+}
+
+/*
+.tns-outer .tns-nav{
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+    justify-content: center;
+    width: 30px;
+    position: absolute;
+    top: 0px;
+    bottom: 0px;
+    left: -60px;
+}
+.tns-nav button{
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    background-color: #c4c4c4;
+    margin: 0px 10px;
+    border-radius: 50px;
+    margin-bottom: 10px;
+    border: 0px;
+}*/
 
 @media only screen and (min-width: 1920px){
 
