--- a/css/style.css
+++ b/css/style.css
@@ -445,6 +445,49 @@ ul.list-style li{
 }
 @media only screen and (max-width:991px){
 
+    .banner-section-wrapper .banner-image{
+        position: static;
+        margin-top: 40px;
+    }
+    .navbar-expand-md .navbar-nav .nav-link{
+        padding: 10px 15px;
+        font-size: 15px;
+    }
+    .navbar-brand img{ 
+        width: 100%;
+    }
+    .color-box{
+        padding: 50px 15px;
+    }
+    .color-box h5{
+        font-size: 20px;
+        margin-bottom: 20px
+    }
+    .color-box ul {
+        padding-left: 20px;
+    }
+    ul.list-style li {
+        font-size: 16px;
+        margin-top: 10px;
+    }
+    .aboutus-section .banner-box{
+        margin-bottom: 40px;
+    }
+    .service-title h2{
+        font-size: 16px;
+    }
+    .service-title{
+        padding: 20px;
+    }
+    .who-qualifies-section h2 br{
+        display: none;
+    }
+    .social-image{
+        margin-bottom: 30px;
+    }
+    .footer-content{
+        margin-bottom: 40px;
+    }
 }
 @media only screen and (max-width:767px){
 
