--- a/css/style.css
+++ b/css/style.css
@@ -404,7 +404,16 @@ ul.list-style li{
 .tns-outer{
     position: relative;
 }
-
+.banner-section-wrapper .owl-carousel .owl-item img{
+    width: auto;
+}
+.banner-section-wrapper .owl-dots .owl-dot{
+    width: 10px;
+    height: 10px;
+    background-color: #000000;
+    border-radius: 50px;
+    margin: 0px 2px;
+}
 /*
 .tns-outer .tns-nav{
     display: flex;
