--- a/css/style.css
+++ b/css/style.css
@@ -567,6 +567,11 @@ ul.list-style li{
     .who-qualifies-section h6{
         font-size: 20px;
     }
+    .ilove{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
 }
 @media only screen and (max-width:575px){
 
