--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,7 @@ body{
     color: #2C7BF3;
     font-size: 22px;
 }
-.banner-box h2{
+.banner-box h2,.h2-title{
     font-size: 32px;
     color: #00335B;
     font-weight: 600;
@@ -499,13 +499,50 @@ ul.list-style li{
 .contact-links-section .social-icon{
     margin-bottom: 0px;
 }
+.form-map-section{
+    background-color: #F4F4F4;
+}
+.map-section-box{
+    background-color: #ffffff;
+    padding: 20px;
+}
+.mapbox iframe{
+    width: 100%;
+    height: 400px;
+}
+.formbox{
+    background-color: #ffffff;
+    padding: 20px;
+    height: 546px;
+}
+.formbox .form-control{
+    border-left: 0px;
+    border-right: 0px;
+    border-top: 0px;
+    border-radius: 0px;
+}
+.formbox .btn{
+    margin-bottom: 0px !important;
+    border-radius: 6px;
+    border: 3px solid #0079C8;
+    color: #0079C8;
+    font-size: 16px;
+    font-weight: 600;
+    background: transparent;
+    margin-top: 30px;
+}
+.formbox .btn i{
+    margin-top: 2px;
+    position: relative;
+    top: -1px;
+}
+.make-a-referral-form input[type="text"],.make-a-referral-form input[type="tel"],.make-a-referral-form input[type="date"],.make-a-referral-form input[type="email"]{
+    height:50px;
+}
 @media only screen and (min-width: 1920px){
 
     .container-fluid{
         width: 1720px;
-    }
-    .banner-section-wrapper .banner-image{
-        
     }
 }
 @media only screen and (max-width:1440px){
@@ -562,6 +599,9 @@ ul.list-style li{
 }
 @media only screen and (max-width:767px){
 
+    .page-name-section .banner-box h2 {
+        font-size: 35px;
+    }
     .navbar.navbar-expand-md.navbar-dark.mb-4{
         margin-bottom: 0px !important;
     }
