--- a/css/style.css
+++ b/css/style.css
@@ -539,6 +539,8 @@ ul.list-style li{
 .make-a-referral-form input[type="text"],.make-a-referral-form input[type="tel"],.make-a-referral-form input[type="date"],.make-a-referral-form input[type="email"]{
     height:50px;
 }
+
+
 @media only screen and (min-width: 1920px){
 
     .container-fluid{
@@ -553,6 +555,9 @@ ul.list-style li{
 }
 @media only screen and (max-width:991px){
 
+    .contact-links{
+        margin-bottom: 20px;
+    }
     .banner-section-wrapper .banner-image{
         position: static;
         margin-top: 40px;
@@ -599,6 +604,15 @@ ul.list-style li{
 }
 @media only screen and (max-width:767px){
 
+    .contact-links-section .social-icon {
+        margin-bottom: 20px;
+    }
+    .contact-links-section .contact-links {
+        margin-bottom: 40px;
+    }
+    .contact-links-section .contact-links a{
+        font-size: 20px;
+    }
     .page-name-section .banner-box h2 {
         font-size: 35px;
     }
