--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,10 @@ body{
 .navbar-expand-md .navbar-nav .nav-link{
     color: #333333;
 }
+.footer-content a{
+    text-decoration: none;
+    color: #ffffff;
+}
 .navbar-nav.me-auto{
     margin-left: auto!important;
     margin-right: 0px !important;
